--- a/index.html
+++ b/index.html
@@ -67,14 +67,23 @@
 
 <body>
 
-<header>
-  <div class="brand">ChoiceMentor</div>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Reviews</a>
-    <a href="#">Guides</a>
-    <a href="#">About</a>
-  </nav>
+<header class="site-header">
+  <div class="header-inner">
+
+    <div class="logo">ChoiceMentor</div>
+
+    <!-- DESKTOP MENU -->
+    <nav class="nav-desktop">
+      <a href="#">Home</a>
+      <a href="#">Reviews</a>
+      <a href="#">Guides</a>
+      <a href="#">About</a>
+    </nav>
+
+    <!-- MOBILE MENU ICON -->
+    <div class="menu-toggle">☰</div>
+
+  </div>
 </header>
 
 <section class="hero">
