--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <div class="logo">ChoiceMentor</div>
 
-    <!-- DESKTOP MENU -->
+    <!-- DESKTOP NAV -->
     <nav class="nav-desktop">
       <a href="#">Home</a>
       <a href="#">Reviews</a>
@@ -140,8 +140,8 @@
       <a href="#">About</a>
     </nav>
 
-    <!-- MOBILE MENU ICON -->
-    <div class="menu-toggle">☰</div>
+    <!-- MOBILE ICON -->
+    <div class="menu-toggle">&#9776;</div>
 
   </div>
 </header>
