--- a/index.html
+++ b/index.html
@@ -104,10 +104,19 @@
 }
     /* ===== MOBILE MENU DROPDOWN ===== */
 .nav-mobile {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+
   display: none;
   flex-direction: column;
+
   background: #ffffff;
-  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+
+  z-index: 1000;
 }
 
 .nav-mobile a {
