--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
     display: none !important;
   }
 }
+    .logo-img {
+  height: 28px;
+  width: auto;
+}
   </style>
 </head>
 
@@ -148,7 +152,7 @@
   <div class="header-inner">
 
     <!-- LOGO -->
-    <div class="logo">ChoiceMentor</div>
+    <img src="logo.png" alt="ChoiceMentor logo" class="logo-img">
 
     <!-- DESKTOP NAV -->
     <nav class="nav-desktop">
