--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
 }
 
 .logo {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 700;
+  color: #2563eb;
+  letter-spacing: 0.3px;
 }
 
 /* ===== DESKTOP NAV ===== */
