--- a/index.html
+++ b/index.html
@@ -53,17 +53,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 14px 16px;
+  padding: 10px 16px;
   max-width: 1100px;
   margin: auto;
 }
 
-.logo {
-  font-size: 24px;
-  font-weight: 700;
-  color: #2563eb;
-  letter-spacing: 0.3px;
-}
 
 /* ===== DESKTOP NAV ===== */
 .nav-desktop {
@@ -141,9 +135,15 @@
     display: none !important;
   }
 }
-    .logo-img {
-  height: 48px;
+    .logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo-img {
+  height: 44px;     /* ideal for mobile header */
   width: auto;
+  display: block;  /* removes inline gap */
 }
   </style>
 </head>
@@ -154,7 +154,9 @@
   <div class="header-inner">
 
     <!-- LOGO -->
-    <img src="logo.png" alt="ChoiceMentor logo" class="logo-img">
+    <div class="logo">
+  <img src="logo.png" alt="ChoiceMentor logo" class="logo-img">
+    </div>
 
     <!-- DESKTOP NAV -->
     <nav class="nav-desktop">
