--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 16px;
+  padding: 8px 16px;
   max-width: 1100px;
   margin: auto;
 }
@@ -141,10 +141,17 @@
 }
 
 .logo-img {
-  height: 44px;     /* ideal for mobile header */
+  height: 52px;     /* ideal for mobile header */
   width: auto;
   display: block;  /* removes inline gap */
 }
+    @media (max-width: 768px) {
+  .header-inner {
+    max-width: 100%;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+    }
   </style>
 </head>
 
