--- a/index.html
+++ b/index.html
@@ -153,6 +153,32 @@
     padding-right: 12px;
   }
     }
+    .featured-guides {
+  padding: 40px 20px;
+  max-width: 1100px;
+  margin: auto;
+}
+
+.featured-guides h2 {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.guides-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  max-width: 400px;
+  margin: auto;
+}
+
+.guides-list a {
+  text-decoration: none;
+  color: #2563eb;
+  font-weight: 500;
+  text-align: center;
+}
   </style>
 </head>
 
@@ -195,6 +221,15 @@
     in the USA and India — without confusion.
   </p>
 </section>
+  <section class="featured-guides">
+  <h2>Featured Buying Guides</h2>
+
+  <div class="guides-list">
+    <a href="#">Best Smartphones Under $500</a>
+    <a href="#">Best Laptops for Students</a>
+    <a href="#">Best Headphones for Work</a>
+  </div>
+  </section>
 
 <footer>
   © 2026 ChoiceMentor · Honest recommendations
