--- a/index.html
+++ b/index.html
@@ -284,6 +284,13 @@
     grid-template-columns: 1fr;
   }
 }
+    .guide-cta {
+  display: inline-block;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #2563eb;
+  font-weight: 600;
+}
    
   </style>
 </head>
@@ -327,26 +334,27 @@
     in the USA and India — without confusion.
   </p>
 </section>
- <div class="guides-grid">
+<div class="guides-grid">
 
-  <a href="#" class="guide-card">
-    <strong>Best Smartphones Under $500</strong>
-    <span>Top picks with best value for money.</span>
+  <a class="guide-card" href="#">
+    <h3>Best Smartphones Under $500</h3>
+    <p>Top picks with best value for money.</p>
+    <span class="guide-cta">Read guide →</span>
   </a>
 
-  <a href="#" class="guide-card">
-    <strong>Best Laptops for Students</strong>
-    <span>Reliable, affordable laptops for study.</span>
+  <a class="guide-card" href="#">
+    <h3>Best Laptops for Students</h3>
+    <p>Reliable, affordable laptops for study.</p>
+    <span class="guide-cta">Read guide →</span>
   </a>
 
-  <a href="#" class="guide-card">
-    <strong>Best Headphones for Work</strong>
-    <span>Comfortable & clear for long hours.</span>
+  <a class="guide-card" href="#">
+    <h3>Best Headphones for Work</h3>
+    <p>Comfortable & clear for long hours.</p>
+    <span class="guide-cta">Read guide →</span>
   </a>
 
 </div>
-
-  </div>
   <section class="categories">
   <h2>Popular Categories</h2>
 
