--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <div>✔ Honest & unbiased reviews</div>
     <div>✔ Research-backed comparisons</div>
     <div>✔ Updated recommendations</div>
-    <div>✔ USA & India focused guides</div>
+    <div>✔ Guides tailored for US buyers</div>
   </div>
 </section>
   <footer>
