--- a/index.html
+++ b/index.html
@@ -291,6 +291,38 @@
   color: #2563eb;
   font-weight: 600;
 }
+    .start-guide {
+  padding: 50px 20px;
+  text-align: center;
+  background: #ffffff;
+  margin-top: 40px;
+}
+
+.start-guide h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.start-guide p {
+  font-size: 16px;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+.start-btn {
+  display: inline-block;
+  padding: 12px 22px;
+  background: #2563eb;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: 600;
+  transition: background 0.2s ease;
+}
+
+.start-btn:hover {
+  background: #1e4fd8;
+}
    
   </style>
 </head>
@@ -391,7 +423,7 @@
   </div>
   </section>
   <section class="trust-section">
-  <h2>Why Trust ChoiceMentor?</h2>
+  <h2>Why Millions Trust ChoiceMentor</h2>
 
   <div class="trust-points">
     <div>✔ Honest & unbiased reviews</div>
@@ -400,6 +432,12 @@
     <div>✔ Guides tailored for US buyers</div>
   </div>
 </section>
+  <section class="start-guide">
+  <h2>Not Sure Where to Start?</h2>
+  <p>Our most popular buying guide helps thousands of readers make smarter choices.</p>
+
+  <a href="#" class="start-btn">View Best Smartphones Under $500</a>
+  </section>
   <footer>
   © 2026 ChoiceMentor · Honest recommendations
 </footer>
