--- a/index.html
+++ b/index.html
@@ -356,6 +356,16 @@
 .hero-cta:hover {
   background: #1e4fd8;
 }
+    .guide-badge {
+  display: inline-block;
+  font-size: 11px;
+  font-weight: 600;
+  color: #2563eb;
+  background: #e8f0ff;
+  padding: 4px 8px;
+  border-radius: 6px;
+  margin-bottom: 8px;
+    }
    
   </style>
 </head>
@@ -437,21 +447,24 @@
     </a>
   </div>
     </section>
-<div class="guides-grid" id="guides">
+<div class="guides-grid">
 
   <a class="guide-card" href="#">
+    <span class="guide-badge">Buying Guide</span>
     <h3>Best Smartphones Under $500</h3>
     <p>Top picks with best value for money.</p>
     <span class="guide-cta">Read guide →</span>
   </a>
 
   <a class="guide-card" href="#">
+    <span class="guide-badge">Buying Guide</span>
     <h3>Best Laptops for Students</h3>
     <p>Reliable, affordable laptops for study.</p>
     <span class="guide-cta">Read guide →</span>
   </a>
 
   <a class="guide-card" href="#">
+    <span class="guide-badge">Buying Guide</span>
     <h3>Best Headphones for Work</h3>
     <p>Comfortable & clear for long hours.</p>
     <span class="guide-cta">Read guide →</span>
