--- a/index.html
+++ b/index.html
@@ -16,24 +16,6 @@
       background: #f8f9fb;
       color: #222;
     }
-    
-    
-    .hero {
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 32px;
-      margin-bottom: 12px;
-    }
-
-    .hero p {
-      font-size: 16px;
-      color: #555;
-      max-width: 600px;
-      margin: auto;
-    }
 
     footer {
       margin-top: 60px;
@@ -154,7 +136,7 @@
   }
     }
     .featured-guides {
-  padding: 40px 20px;
+  padding: 60px 20px 40px;
   max-width: 1100px;
   margin: auto;
 }
@@ -366,6 +348,24 @@
   border-radius: 6px;
   margin-bottom: 8px;
     }
+    .guide-card {
+  position: relative;
+}
+
+.guide-card::after {
+  content: "→";
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  font-size: 16px;
+  color: #c7d2fe;
+  transition: transform 0.2s ease, color 0.2s ease;
+}
+
+.guide-card:hover::after {
+  transform: translateX(4px);
+  color: #2563eb;
+}
    
   </style>
 </head>
@@ -447,6 +447,15 @@
     </a>
   </div>
     </section>
+  <section id="guides" style="padding:40px 20px;text-align:center;">
+  <h2 style="font-size:24px;margin-bottom:8px;">
+    Top Buying Guides
+  </h2>
+  <p style="font-size:15px;color:#555;max-width:600px;margin:0 auto 24px;">
+    Carefully researched guides to help you choose the best products
+    without wasting money.
+  </p>
+  </section>
 <div class="guides-grid">
 
   <a class="guide-card" href="#">
@@ -487,9 +496,36 @@
 
   <a href="#" class="start-btn">View Best Smartphones Under $500</a>
   </section>
-  <footer>
-  © 2026 ChoiceMentor · Honest recommendations
-</footer>
+  <footer style="background:#fff;border-top:1px solid #eee;margin-top:60px;">
+  <div style="max-width:1100px;margin:auto;padding:30px 20px;text-align:center;">
+
+    <p style="font-weight:600;font-size:16px;margin-bottom:8px;">
+      ChoiceMentor
+    </p>
+
+    <p style="font-size:14px;color:#555;max-width:700px;margin:0 auto 14px;">
+      ChoiceMentor provides independent buying guides and product recommendations
+      tailored for US shoppers. Our goal is to help you make smarter purchase decisions.
+    </p>
+
+    <p style="font-size:13px;color:#666;max-width:700px;margin:0 auto 14px;">
+      Disclosure: Some links on this site may be affiliate links.
+      This means we may earn a commission at no extra cost to you.
+    </p>
+
+    <div style="margin-bottom:14px;">
+      <a href="#" style="margin:0 10px;font-size:14px;color:#2563eb;text-decoration:none;">About</a>
+      <a href="#" style="margin:0 10px;font-size:14px;color:#2563eb;text-decoration:none;">Contact</a>
+      <a href="#" style="margin:0 10px;font-size:14px;color:#2563eb;text-decoration:none;">Disclaimer</a>
+      <a href="#" style="margin:0 10px;font-size:14px;color:#2563eb;text-decoration:none;">Privacy Policy</a>
+    </div>
+
+    <p style="font-size:13px;color:#888;">
+      © 2026 ChoiceMentor · USA-focused buying guides
+    </p>
+
+  </div>
+  </footer>
   <script>
   const menuToggle = document.querySelector('.menu-toggle');
   const mobileMenu = document.querySelector('.nav-mobile');
