--- a/index.html
+++ b/index.html
@@ -482,6 +482,9 @@
 </div>
   <section class="trust-section">
   <h2>Why Millions Trust ChoiceMentor</h2>
+    <p style="font-size:14px;color:#555;margin-bottom:18px;">
+Independent buying guides based on research, real use cases, and buyer needs.
+    </p>
 
   <div class="trust-points">
     <div>✔ Honest & unbiased reviews</div>
