--- a/index.html
+++ b/index.html
@@ -190,9 +190,17 @@
   color: #555;
 }
 
+.guide-card {
+  position: relative;
+}
+
 .guide-card:hover {
   transform: translateY(-4px);
-  box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+  box-shadow: 0 12px 30px rgba(0,0,0,0.12);
+}
+
+.guide-card:hover .guide-cta {
+  text-decoration: underline;
 }
     .categories {
   padding: 40px 16px;
