--- a/index.html
+++ b/index.html
@@ -374,6 +374,12 @@
   transform: translateX(4px);
   color: #2563eb;
 }
+    /* Mobile tap feedback */
+.guide-card:active {
+  transform: scale(0.98);
+  box-shadow: 0 8px 18px rgba(0,0,0,0.12);
+}
+    
    
   </style>
 </head>
