--- a/index.html
+++ b/index.html
@@ -379,8 +379,17 @@
   transform: scale(0.98);
   box-shadow: 0 8px 18px rgba(0,0,0,0.12);
 }
-    
-   
+    .section-divider {
+  height: 1px;
+  background: linear-gradient(
+    to right,
+    transparent,
+    rgba(0,0,0,0.08),
+    transparent
+  );
+  margin: 50px auto;
+  max-width: 900px;
+    }
   </style>
 </head>
 
@@ -426,6 +435,7 @@
 
   <a href="#guides" class="hero-cta">Explore Top Guides</a>
 </section>
+  <div class="section-divider"></div>
     <section class="categories">
   <h2>Popular Categories</h2>
 
@@ -461,6 +471,7 @@
     </a>
   </div>
     </section>
+  <div class="section-divider"></div>
   <section id="guides" style="padding:40px 20px;text-align:center;">
   <h2 style="font-size:24px;margin-bottom:8px;">
     Top Buying Guides
@@ -470,6 +481,7 @@
     without wasting money.
   </p>
   </section>
+  <div class="section-divider"></div>
 <div class="guides-grid">
 
   <a class="guide-card" href="#">
@@ -494,6 +506,7 @@
   </a>
 
 </div>
+  <div class="section-divider"></div>
   <section class="trust-section">
   <h2>Why Millions Trust ChoiceMentor</h2>
     <p style="font-size:14px;color:#555;margin-bottom:18px;">
@@ -507,6 +520,7 @@ Independent buying guides based on research, real use cases, and buyer needs.
     <div>✔ Guides tailored for US buyers</div>
   </div>
 </section>
+  <div class="section-divider"></div>
   <section class="start-guide">
   <h2>Not Sure Where to Start?</h2>
   <p>Our most popular buying guide helps thousands of readers make smarter choices.</p>
