--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
   <div class="section-divider"></div>
 <div class="guides-grid">
 
-  <a class="guide-card" href="#">
+  <a class="guide-card" href="best-smartphones-under-500.html">
     <span class="guide-badge">Buying Guide</span>
     <h3>Best Smartphones Under $500</h3>
     <p>Top picks with best value for money.</p>
