--- a/index.html
+++ b/index.html
@@ -491,14 +491,14 @@
     <span class="guide-cta">Read guide →</span>
   </a>
 
-  <a class="guide-card" href="#">
+  <a class="guide-card" href="best-laptops-for-students.html">
     <span class="guide-badge">Buying Guide</span>
     <h3>Best Laptops for Students</h3>
     <p>Reliable, affordable laptops for study.</p>
     <span class="guide-cta">Read guide →</span>
   </a>
 
-  <a class="guide-card" href="#">
+  <a class="guide-card" href="best-headphones-for-work.html">
     <span class="guide-badge">Buying Guide</span>
     <h3>Best Headphones for Work</h3>
     <p>Comfortable & clear for long hours.</p>
