--- a/best-laptops-for-students.html
+++ b/best-laptops-for-students.html
@@ -1,101 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Best Laptops for Students (2026 Buying Guide)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Looking for the best laptops for students? This 2026 buying guide covers affordable, reliable laptops for school, college, and online classes.">
+<h1>Best Laptops for Students</h1>
 
-  <link rel="icon" href="favicon.ico">
+<p style="color:#666;font-size:14px;margin-bottom:14px;">
+Updated for 2026 · USA Buying Guide
+</p>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f8f9fb;
-      color: #222;
-      line-height: 1.7;
-    }
+<p>
+Choosing the right laptop as a student can make a huge difference in daily productivity.
+Whether you’re attending online classes, writing assignments, or coding,
+you need a laptop that’s reliable, fast, and affordable.
+</p>
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 40px 20px;
-    }
+<p>
+This guide covers the best laptops for students in the United States,
+based on real-world performance, battery life, portability, and long-term value —
+not just specs on paper.
+</p>
 
-    h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
-    }
+<div style="background:#f1f5ff;border-left:4px solid #2563eb;padding:14px 16px;margin:24px 0;border-radius:8px;font-size:14px;">
+💡 <strong>Quick tip:</strong> For most students, 8–16GB RAM and an SSD matter more than having the latest processor.
+</div>
 
-    .meta {
-      font-size: 14px;
-      color: #666;
-      margin-bottom: 30px;
-    }
+<h2>Top Picks at a Glance</h2>
 
-    h2 {
-      margin-top: 40px;
-      font-size: 22px;
-    }
+<div class="guide-card">
+  <h3>1. MacBook Air (M-Series) – Best Overall</h3>
+  <p>
+The MacBook Air delivers outstanding performance, long battery life,
+and a lightweight design — ideal for students who want a reliable laptop that lasts for years.
+</p>
+<ul>
+  <li>✔ Excellent performance for study and creative work</li>
+  <li>✔ All-day battery life</li>
+  <li>✔ Silent, lightweight design</li>
+</ul>
+<a href="#" class="start-btn">Check price on Amazon</a>
+</div>
 
-    p {
-      font-size: 16px;
-      color: #444;
-    }
+<br>
 
-    ul {
-      padding-left: 18px;
-    }
+<div class="guide-card">
+  <h3>2. Dell Inspiron / HP Pavilion – Best Value</h3>
+  <p>
+These models offer a great balance between performance and price,
+making them perfect for students who want solid everyday reliability.
+</p>
+<ul>
+  <li>✔ Strong performance for multitasking</li>
+  <li>✔ Comfortable keyboards</li>
+  <li>✔ Widely available support in the USA</li>
+</ul>
+<a href="#" class="start-btn">Check price on Amazon</a>
+</div>
 
-    li {
-      margin-bottom: 10px;
-    }
+<br>
 
-    .back-link {
-      display: inline-block;
-      margin-top: 40px;
-      text-decoration: none;
-      color: #2563eb;
-      font-weight: 600;
-    }
-  </style>
-</head>
+<div class="guide-card">
+  <h3>3. Acer Aspire / Lenovo IdeaPad – Best Budget</h3>
+  <p>
+If you’re on a tight budget, these laptops provide dependable performance
+for assignments, browsing, and media consumption.
+</p>
+<ul>
+  <li>✔ Affordable pricing</li>
+  <li>✔ Solid battery life</li>
+  <li>✔ Lightweight and portable</li>
+</ul>
+<a href="#" class="start-btn">Check price on Amazon</a>
+</div>
 
-<body>
+<h2>How to Choose the Right Laptop</h2>
 
-  <div class="container">
-    <h1>Best Laptops for Students (2026)</h1>
-    <div class="meta">Updated for US students · Honest buying guide</div>
+<p>When picking a student laptop, focus on what you’ll actually use daily:</p>
 
-    <p>
-      Choosing the right laptop as a student can be confusing. You need something
-      affordable, reliable, and powerful enough for studies without overspending.
-      This guide helps you pick the best laptops for students in 2026.
-    </p>
+<ul>
+  <li><strong>Performance:</strong> 8–16GB RAM and SSD storage ensure smooth multitasking</li>
+  <li><strong>Battery life:</strong> Aim for at least 8 hours to last through classes</li>
+  <li><strong>Portability:</strong> Lightweight laptops are easier to carry all day</li>
+  <li><strong>Durability:</strong> A solid build matters for long-term use</li>
+</ul>
 
-    <h2>What Students Should Look For</h2>
-    <ul>
-      <li>Good battery life (8+ hours)</li>
-      <li>Lightweight and portable</li>
-      <li>Fast SSD storage</li>
-      <li>Reliable keyboard and display</li>
-    </ul>
+<p>
+For most students, expensive gaming laptops or premium features aren’t necessary.
+A reliable mid-range laptop will handle coursework, research, and entertainment comfortably.
+</p>
 
-    <h2>Best Laptop Options for Students</h2>
-    <p>
-      We focus on laptops that offer the best balance of performance, price,
-      and long-term reliability for school and college use.
-    </p>
-
-    <h2>Final Recommendation</h2>
-    <p>
-      If you’re a student, prioritize reliability and battery life over raw power.
-      A well-balanced laptop will easily last through your academic years.
-    </p>
-
-    <a href="index.html" class="back-link">← Back to Home</a>
-  </div>
-
-</body>
-</html>
+<p style="font-size:13px;color:#666;margin-top:30px;">
+Disclosure: Some links on this page may be affiliate links. This helps support our site at no extra cost to you.
+</p>
