--- a/best-headphones-for-work.html
+++ b/best-headphones-for-work.html
@@ -1,101 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Best Headphones for Work (2026 Guide)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Looking for the best headphones for work? This 2026 guide covers comfortable, clear, and reliable headphones for office and remote work.">
+<h1>Best Headphones for Work</h1>
 
-  <link rel="icon" href="favicon.ico">
+<p style="color:#666;font-size:14px;margin-bottom:14px;">
+Updated for 2026 · USA Buying Guide
+</p>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f8f9fb;
-      color: #222;
-      line-height: 1.7;
-    }
+<p>
+The right headphones can significantly improve your focus and comfort during work.
+Whether you’re working from home, attending virtual meetings, or spending long hours
+on calls, choosing the right pair matters.
+</p>
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 40px 20px;
-    }
+<p>
+This guide highlights the best headphones for work in the United States,
+based on comfort, sound quality, noise cancellation, microphone performance,
+and long-term usability.
+</p>
 
-    h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
-    }
+<div style="background:#f1f5ff;border-left:4px solid #2563eb;padding:14px 16px;margin:24px 0;border-radius:8px;font-size:14px;">
+💡 <strong>Quick tip:</strong> For work, comfort and noise cancellation matter more than heavy bass.
+</div>
 
-    .meta {
-      font-size: 14px;
-      color: #666;
-      margin-bottom: 30px;
-    }
+<h2>Top Picks at a Glance</h2>
 
-    h2 {
-      margin-top: 40px;
-      font-size: 22px;
-    }
+<div class="guide-card">
+  <h3>1. Sony WH-1000XM Series – Best Overall</h3>
+  <p>
+Sony’s WH-1000XM headphones offer industry-leading noise cancellation,
+excellent sound quality, and all-day comfort — ideal for focused work sessions.
+</p>
+<ul>
+  <li>✔ Best-in-class noise cancellation</li>
+  <li>✔ Comfortable for long hours</li>
+  <li>✔ Strong battery life</li>
+</ul>
+<a href="#" class="start-btn">Check price on Amazon</a>
+</div>
 
-    p {
-      font-size: 16px;
-      color: #444;
-    }
+<br>
 
-    ul {
-      padding-left: 18px;
-    }
+<div class="guide-card">
+  <h3>2. Bose QuietComfort Series – Best Comfort</h3>
+  <p>
+Bose headphones are known for exceptional comfort and clear sound,
+making them perfect for meetings and extended use.
+</p>
+<ul>
+  <li>✔ Extremely lightweight and comfortable</li>
+  <li>✔ Clear voice pickup for calls</li>
+  <li>✔ Reliable noise reduction</li>
+</ul>
+<a href="#" class="start-btn">Check price on Amazon</a>
+</div>
 
-    li {
-      margin-bottom: 10px;
-    }
+<br>
 
-    .back-link {
-      display: inline-block;
-      margin-top: 40px;
-      text-decoration: none;
-      color: #2563eb;
-      font-weight: 600;
-    }
-  </style>
-</head>
+<div class="guide-card">
+  <h3>3. Anker Soundcore – Best Budget</h3>
+  <p>
+Anker’s Soundcore lineup offers impressive features at a lower price,
+ideal for professionals who want value without sacrificing quality.
+</p>
+<ul>
+  <li>✔ Excellent value for money</li>
+  <li>✔ Solid battery life</li>
+  <li>✔ Comfortable design</li>
+</ul>
+<a href="#" class="start-btn">Check price on Amazon</a>
+</div>
 
-<body>
+<h2>How to Choose the Right Headphones for Work</h2>
 
-  <div class="container">
-    <h1>Best Headphones for Work (2026)</h1>
-    <div class="meta">Work-from-home & office friendly · US-focused guide</div>
+<p>When selecting work headphones, focus on these essentials:</p>
 
-    <p>
-      Whether you work from home or in an office, the right headphones can make
-      a huge difference. Comfort, clear sound, and noise isolation are key.
-      This guide helps you choose the best headphones for work in 2026.
-    </p>
+<ul>
+  <li><strong>Comfort:</strong> Lightweight design and soft ear cushions</li>
+  <li><strong>Noise cancellation:</strong> Helps you stay focused</li>
+  <li><strong>Microphone quality:</strong> Important for meetings and calls</li>
+  <li><strong>Battery life:</strong> At least 20–30 hours for wireless models</li>
+</ul>
 
-    <h2>What to Look For in Work Headphones</h2>
-    <ul>
-      <li>Comfort for long hours</li>
-      <li>Clear microphone quality</li>
-      <li>Good noise isolation or cancellation</li>
-      <li>Reliable wired or wireless connection</li>
-    </ul>
+<p>
+For most professionals, premium audio features aren’t as important as comfort,
+clarity, and reliability. A well-balanced pair will improve productivity
+without distractions.
+</p>
 
-    <h2>Top Picks for Work Use</h2>
-    <p>
-      We focus on headphones that perform well for meetings, calls,
-      focused work, and everyday professional use.
-    </p>
-
-    <h2>Final Recommendation</h2>
-    <p>
-      If you spend hours on calls or deep work, prioritize comfort and microphone
-      quality over flashy features. A reliable pair will boost productivity daily.
-    </p>
-
-    <a href="index.html" class="back-link">← Back to Home</a>
-  </div>
-
-</body>
-</html>
+<p style="font-size:13px;color:#666;margin-top:30px;">
+Disclosure: Some links on this page may be affiliate links. This helps support our site at no extra cost to you.
+</p>
