--- a/best-laptops-for-students.html
+++ b/best-laptops-for-students.html
@@ -1,89 +1,97 @@
-<h1>Best Laptops for Students</h1>
+<div class="guide-container">
 
-<p style="color:#666;font-size:14px;margin-bottom:14px;">
-Updated for 2026 · USA Buying Guide
-</p>
+  <h1>Best Laptops for Students</h1>
 
-<p>
-Choosing the right laptop as a student can make a huge difference in daily productivity.
-Whether you’re attending online classes, writing assignments, or coding,
-you need a laptop that’s reliable, fast, and affordable.
-</p>
+  <p style="color:#666;font-size:14px;margin-bottom:14px;">
+    Updated for 2026 · USA Buying Guide
+  </p>
 
-<p>
-This guide covers the best laptops for students in the United States,
-based on real-world performance, battery life, portability, and long-term value —
-not just specs on paper.
-</p>
-
-<div style="background:#f1f5ff;border-left:4px solid #2563eb;padding:14px 16px;margin:24px 0;border-radius:8px;font-size:14px;">
-💡 <strong>Quick tip:</strong> For most students, 8–16GB RAM and an SSD matter more than having the latest processor.
-</div>
-
-<h2>Top Picks at a Glance</h2>
-
-<div class="guide-card">
-  <h3>1. MacBook Air (M-Series) – Best Overall</h3>
   <p>
-The MacBook Air delivers outstanding performance, long battery life,
-and a lightweight design — ideal for students who want a reliable laptop that lasts for years.
-</p>
-<ul>
-  <li>✔ Excellent performance for study and creative work</li>
-  <li>✔ All-day battery life</li>
-  <li>✔ Silent, lightweight design</li>
-</ul>
-<a href="#" class="start-btn">Check price on Amazon</a>
-</div>
+    Choosing the right laptop as a student can make a huge difference in daily productivity.
+    Whether you’re attending online classes, writing assignments, or learning to code,
+    you need a laptop that’s reliable, fast, and affordable.
+  </p>
 
-<br>
-
-<div class="guide-card">
-  <h3>2. Dell Inspiron / HP Pavilion – Best Value</h3>
   <p>
-These models offer a great balance between performance and price,
-making them perfect for students who want solid everyday reliability.
-</p>
-<ul>
-  <li>✔ Strong performance for multitasking</li>
-  <li>✔ Comfortable keyboards</li>
-  <li>✔ Widely available support in the USA</li>
-</ul>
-<a href="#" class="start-btn">Check price on Amazon</a>
-</div>
+    This guide covers the best laptops for students in the United States,
+    based on real-world performance, battery life, portability, and long-term value —
+    not just specs on paper.
+  </p>
 
-<br>
+  <div style="background:#f1f5ff;border-left:4px solid #2563eb;padding:14px 16px;margin:24px 0;border-radius:8px;font-size:14px;">
+    💡 <strong>Quick tip:</strong> For most students, 8–16GB RAM and an SSD matter more than having the latest processor.
+  </div>
 
-<div class="guide-card">
-  <h3>3. Acer Aspire / Lenovo IdeaPad – Best Budget</h3>
+  <h2>Top Picks at a Glance</h2>
+
+  <div class="guide-card">
+    <span class="guide-badge">Best Overall</span>
+    <h3>MacBook Air (M-Series)</h3>
+    <p>
+      The MacBook Air delivers outstanding performance, all-day battery life,
+      and a lightweight design — perfect for students who want a laptop that lasts for years.
+    </p>
+    <ul>
+      <li>✔ Excellent performance for study & creative work</li>
+      <li>✔ All-day battery life</li>
+      <li>✔ Silent, lightweight design</li>
+    </ul>
+    <a href="#" class="start-btn">Check price on Amazon</a>
+  </div>
+
+  <div class="guide-card">
+    <span class="guide-badge">Best Value</span>
+    <h3>Dell Inspiron / HP Pavilion</h3>
+    <p>
+      These laptops offer the best balance between price and performance,
+      making them ideal for everyday student use.
+    </p>
+    <ul>
+      <li>✔ Strong multitasking performance</li>
+      <li>✔ Comfortable keyboards</li>
+      <li>✔ Widely available support in the USA</li>
+    </ul>
+    <a href="#" class="start-btn">Check price on Amazon</a>
+  </div>
+
+  <div class="guide-card">
+    <span class="guide-badge">Best Budget</span>
+    <h3>Acer Aspire / Lenovo IdeaPad</h3>
+    <p>
+      If you’re on a tight budget, these laptops provide dependable performance
+      for assignments, browsing, and streaming.
+    </p>
+    <ul>
+      <li>✔ Affordable pricing</li>
+      <li>✔ Solid battery life</li>
+      <li>✔ Lightweight and portable</li>
+    </ul>
+    <a href="#" class="start-btn">Check price on Amazon</a>
+  </div>
+
+  <h2>How to Choose the Right Laptop</h2>
+
   <p>
-If you’re on a tight budget, these laptops provide dependable performance
-for assignments, browsing, and media consumption.
-</p>
-<ul>
-  <li>✔ Affordable pricing</li>
-  <li>✔ Solid battery life</li>
-  <li>✔ Lightweight and portable</li>
-</ul>
-<a href="#" class="start-btn">Check price on Amazon</a>
+    When picking a laptop for school, focus on what you’ll actually use every day —
+    not marketing hype.
+  </p>
+
+  <ul>
+    <li><strong>Performance:</strong> 8–16GB RAM and SSD storage for smooth multitasking</li>
+    <li><strong>Battery life:</strong> Aim for at least 8 hours per charge</li>
+    <li><strong>Portability:</strong> Lightweight laptops are easier to carry all day</li>
+    <li><strong>Durability:</strong> A solid build helps the laptop last through years of use</li>
+  </ul>
+
+  <p>
+    For most students, expensive gaming laptops or premium features aren’t necessary.
+    A reliable mid-range laptop will comfortably handle coursework, research,
+    and entertainment.
+  </p>
+
+  <p style="font-size:13px;color:#666;margin-top:30px;">
+    Disclosure: Some links on this page may be affiliate links.
+    This helps support our site at no extra cost to you.
+  </p>
+
 </div>
-
-<h2>How to Choose the Right Laptop</h2>
-
-<p>When picking a student laptop, focus on what you’ll actually use daily:</p>
-
-<ul>
-  <li><strong>Performance:</strong> 8–16GB RAM and SSD storage ensure smooth multitasking</li>
-  <li><strong>Battery life:</strong> Aim for at least 8 hours to last through classes</li>
-  <li><strong>Portability:</strong> Lightweight laptops are easier to carry all day</li>
-  <li><strong>Durability:</strong> A solid build matters for long-term use</li>
-</ul>
-
-<p>
-For most students, expensive gaming laptops or premium features aren’t necessary.
-A reliable mid-range laptop will handle coursework, research, and entertainment comfortably.
-</p>
-
-<p style="font-size:13px;color:#666;margin-top:30px;">
-Disclosure: Some links on this page may be affiliate links. This helps support our site at no extra cost to you.
-</p>
